
Since build 216:
----------------

* When passing integers/unsigned integers to COM objects which did not fit 
  into 32bits, OverflowErrors were silently discarded and -1 was silently 
  passed.  This has been fixed for signed integers (an OverflowError is now 
  raised) and unsigned integers now allow for values with the high-bit set to 
  be passed correctly.

* Fixed that in some cases win32file.GetOpenFileName and GetSaveFileName 
  could have returned trailing garbage after an embedded NULL character.
  (bug 3277647)

* Some functions which accepted a DWORD did not accept long integers which
  fit in 32bits with the most signficant bit set (eg, 0x80000000).

* Source-code management moved from CVS to Mercurual.

Since build 215:
----------------
* New loader module for COM objects to avoid some CRT manifest issues.
  pythoncomloaderxx.dll will be copied to your System32 directory and used as
  the entry-point for COM objects instead of pythoncomxx.dll.  This DLL
  is very small - includes a manifest referencing the C runtime library and
  simply loads pythoncomxx.dll and deletes the COM object creation back to it.
  You will need to re-register any COM objects you have to take advantage of
  this.

* Performance Monitor and ISAPI DLLs now include a manifest to fix potential
  CRT related issues using those features.

* Fix potential crash in ISAPI GetServerVariable functions.

* Fix printing on pythonwin on 3.x

* Pythonwin gets an option to set the background color of the selected text.


Since build 214:
----------------
* Update adodbapi to version 2.4,2 -- in this version,
  1. The cursor has a new .query attribute.  It returns the (possibly converted) query sent to ADO. [Thanks to William Dode.]
     This may be useful for testing paramstyle 'format' and 'named' queries.  .query is an extension borrowed from psycopg2.
  2. Added .command and .parameters attributes, which are copies of the original command and parameters sent the the cursor.